Add little margin to fusebox logo

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,6 +24,10 @@
     &-logo {
         display: block;
         width: 145px;
+
+        &.is-fusebox {
+            margin-right: 13px;
+        }
     }
 
     &-heart {
